# control-entradas-salidas

./: .env  .env.example  .gitignore  GUIA_IMPORTAR_JSON.md  INFORME_REQUISICIONES.md  README.md  app_principal.py  buildozer.spec  check_productos.py  compilacion.txt  control_entradas_salidas.db  db_explorer.py  error_log.txt  flet-build.yaml  flet.yaml  google-services.json  init_db.py  install_opencode.sh  lycoris-alertas-firebase-adminsdk-fbsvc-9e1b963903.json  lycoris_local.db  main.py  main_OLD2.py  migracion_almacenes.py  migracion_requisiciones.sql  opencode.txt  package-lock.json  pruebaws  pyproject.toml  requirements.txt  reset_requisiciones.py  test_fcm.py  test_ocrspace.py  test_vision.py  version.json
.control_entradas_cache/: cache.db
.github/workflows/: build_apk.yml  update.yml
android/: AndroidManifest.xml
app/: logger.py
app/database/: base.py  session.py
app/models/: __init__.py  categoria.py  factura.py  movimiento.py  producto.py
app/views/: configuracion_view.py  historial_facturas_view.py  (+4 more)
config/: .device_id  config.py  lycoris-alertas-firebase-adminsdk-fbsvc-3378265d7a.json
migrations/: 001_add_tipo_to_productos.sql  002_add_tipo_documento_to_facturas.sql
old/: app_principal.py  build_apk.txt  main_OLD2.py  test_db.py
supabase/: config.toml
usr/: app_controller.py  app_launcher.py  error_handler.py  notifications.py  ocr_extractor.py  theme.py  updater.py  whatsapp_notifier.py
whatsapp_bot/: README.md  bot.js  config.json  package-lock.json  package.json  server.js  test_server.js
wix/: build_msi.bat  installer.wxs
(+99 files in other folders)
